Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.15.2, 6.0.3
-
Fix Version/s: 5.15.4, 6.2.0 Alpha
-
Component/s: Core: Item Models, Examples and Demos
-
Labels:None
-
Platform/s:
-
Commits:e65558c230bc48ae9cced1f147180f4e33517791 (qt/qtbase/dev) b269ea10c76fd9d7053d0374d9fd16fff2d79a73 (qt/tqtc-qtbase/tqtc/lts-5.15)
Description
The Editable Tree Model example (https://doc.qt.io/qt-6/qtwidgets-itemviews-editabletreemodel-example.html) fails QAbstractItemModelTester "Common error test #3, the second column should NOT have the same children".
This can be easily solved in multiple ways, the fastest is to insert a check for the column being 0 in rowCount()
As a side note, that example also leaks the model. Another easy fix passing this as a 3rd argument to the constructor
Attachments
For Gerrit Dashboard: QTBUG-92178 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
341034,3 | Fix Editable Tree Model example model rowCount and model instance leak | dev | qt/qtbase | Status: MERGED | +2 | 0 |
341057,2 | Fix Editable Tree Model example model rowCount and model instance leak | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |