Fix Editable Tree Model example model rowCount and model instance leak

The rowCount method has been fixed to correctly pass the "Common error
test #3: the second column should NOT have the same children".

It also fixes the model being leaked.

Fixes: QTBUG-92178
Change-Id: If92973e6f83ea9a2715bd335269f6e50d80f52c6
Reviewed-by: Luca Beldi <v.ronin@yahoo.it>
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit e65558c230bc48ae9cced1f147180f4e33517791)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>